# mini-rag-app

./: .env.example  Makefile  README.md  main.py  pyproject.toml
routes/: base.py
src/: main.py  pyproject.toml
src/controllers/: BaseController.py  DataController.py  ProjectController.py  __init__.py
src/helpers/: config.py
src/models/: __init__.py
src/models/enums/: ResponseSignal.py
src/routes/: __init__.py  base.py  data.py
