[project]
name = "mini-RAG"
version = "0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.2",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "uvicorn[standard]==0.29.0",
]
